# Tungsten

./: .claudeignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECISIONS.md  DESIGN.md  LICENSE  PHASE2.md  README.md  input.json  tungsten.json
.cargo/: config.toml
assets/: manifest.json
assets/animations/: walk.json
assets/fonts/: README.md
assets/shaders/: damage_flash.wgsl  lit_sprite.wgsl  sprite.wgsl
crates/tungsten/: Cargo.toml
crates/tungsten-core/: Cargo.toml
crates/tungsten-core/benches/: action_map_bench.rs  ecs_bench.rs  physics_bench.rs  tween_tick.rs
crates/tungsten-core/src/: audio.rs  camera.rs  components.rs  config.rs  config_tests.rs  debug_draw.rs  display.rs  input.rs  inspect.rs  lib.rs  lighting.rs  post.rs  rng.rs  time.rs  tween.rs
crates/tungsten-core/src/assets/: animation.rs  atlas.rs  audio.rs  manifest.rs  material.rs  mod.rs  particle.rs  registry.rs  scene.rs  shader.rs  tilemap.rs
crates/tungsten-core/src/ecs/: archetype.rs  command_buffer.rs  component.rs  entity.rs  event_queue.rs  mod.rs  resource.rs  storage.rs  world.rs
crates/tungsten-core/src/input/: action_map.rs  key_serde.rs
crates/tungsten-core/src/physics/: broadphase.rs  collision.rs  components.rs  events.rs  mod.rs  step.rs
crates/tungsten-core/src/tests/: audio.rs  camera.rs  components.rs  config.rs  debug_draw.rs  display.rs  input.rs  inspect.rs  lighting.rs  post.rs  rng.rs  tween.rs
crates/tungsten-core/src/tests/assets/: animation.rs  atlas.rs  audio.rs  manifest.rs  material.rs  particle.rs  registry.rs  scene.rs  shader.rs  tilemap.rs
crates/tungsten-core/src/tests/ecs/: archetype.rs  command_buffer.rs  entity.rs  event_queue.rs  storage.rs  world.rs
crates/tungsten-core/src/tests/input/: action_map.rs  key_serde.rs
crates/tungsten-core/src/tests/physics/: broadphase.rs  collision.rs  step.rs
crates/tungsten-core/tests/: composition.rs  decision_index.rs  display.rs  manifests.rs  physics_timing.rs
crates/tungsten-render/: Cargo.toml
crates/tungsten-render/benches/: render_bench.rs
crates/tungsten-render/src/: debug_line.rs  debug_line.wgsl  image_diff.rs  lib.rs  lighting.rs  lit_sprite.rs  material.rs  quad.rs  quad.wgsl  renderer.rs  screenshot.rs  shader_hot_reload.rs  sprite.rs  sprite.wgsl  surface.rs  targets.rs  text.rs  timing.rs
crates/tungsten-render/src/assets/smaa/: ATTRIBUTION.md
crates/tungsten-render/src/passes/: desc.rs  mod.rs  order.rs  recorder.rs
crates/tungsten-render/src/post/: bloom.rs  chromatic_aberration.rs  color_adjust.rs  crt.rs  dissolve.rs  dither.rs  fade.rs  film_grain.rs  fog.rs  fullscreen.rs  glitch.rs  god_rays.rs  lut.rs  mod.rs  pixel_outline.rs  pixelate.rs  smaa.rs  smaa_luts.rs  tone_mono.rs  tonemap.rs  vignette.rs  wipe_radial.rs
crates/tungsten-render/src/shaders/: present_blit.wgsl
crates/tungsten-render/src/shaders/stock/: bloom_composite.wgsl  bloom_downsample.wgsl  bloom_threshold.wgsl  color_adjust.wgsl  crt.wgsl  dissolve.wgsl  dither.wgsl  emissive_mask.wgsl  fade.wgsl  film_grain.wgsl  fog.wgsl  glitch.wgsl  god_rays.wgsl  lut.wgsl  rim_light.wgsl  smaa_edge.wgsl  tonemap.wgsl  vignette.wgsl
crates/tungsten-render/src/shaders/stock/lygia/: hash.wgsl  luma.wgsl
crates/tungsten-render/src/tests/: bloom.rs  debug_line.rs  image_diff.rs  lighting.rs  lit_sprite.rs  material.rs  passes_order.rs  post.rs  renderer.rs  screenshot.rs  shader_hot_reload.rs  smaa.rs  sprite.rs
crates/tungsten/benches/: particle_tick.rs
crates/tungsten/src/: app.rs  app_tests.rs  asset_loader.rs  audio.rs  camera.rs  debug_hud.rs  display.rs  hot_reload.rs  input_bridge.rs  inspector.rs  lib.rs  light_extract.rs  particles.rs  physics_debug.rs  post_aa.rs  sprite_extract.rs  state.rs  systems_overlay.rs  telemetry.rs  tilemap_extract.rs  tweens.rs
crates/tungsten/src/tests/: app.rs  asset_loader.rs  audio.rs  debug_hud.rs  display.rs  hot_reload.rs  inspector.rs  light_extract.rs  physics_debug.rs  post_aa.rs  sprite_extract.rs  state.rs  systems_overlay.rs  telemetry.rs  tweens.rs
crates/tungsten/tests/: asset_smoke.rs  atlas_integration.rs  camera.rs  particles.rs
docs/: DECISION_INDEX.md  LLM_INDEX.md
docs/perf/: profiling-workflow.md
docs/plans/: Phase3-Milestone-21-debug-tooling.md  Phase3-Milestone12-plan.md  Phase3-Milestone13-plan.md  Phase3-Milestone14-plan.md  Phase3-Milestone17-plan.md  Phase3-Milestone20-scene-state-system.md  Phase3.md  README.md  app-rs-split.md  milestone-22-sprite-atlases.md  phase2-m12-archetypal-ecs.md  phase3-milestone-22-plan.md  phase3-milestone-24-plan.md  phase3-milestone16-plan.md  phase3-milestone18-plan.md  phase3-milestone19-plan.md  phase4-ideas.md  phase4-milestone-25-render-foundation.md  phase4-milestone-26-materials-post-stack.md  phase4-milestone-27-smaa-presentation-aa.md  phase4.md  rust_guide_optimize.md  swapchain-frame-pacing-followup.md
docs/showcase/: README.md
examples/01_platformer/: Cargo.toml
examples/01_window/: Cargo.toml
examples/02_ecs/: Cargo.toml
examples/02_sprite_stress/: Cargo.toml
examples/03_component_sprites/: Cargo.toml
examples/03_component_sprites/assets/: manifest.json
examples/03_component_sprites/src/: main.rs
examples/03_dots/: Cargo.toml
examples/03_scene_state/: Cargo.toml
examples/04_scene_state/: Cargo.toml
examples/04_sprites/: Cargo.toml
examples/04_sprites/src/: main.rs
examples/05_animation/: Cargo.toml
examples/05_animation/src/: main.rs
examples/06_text/: Cargo.toml
examples/06_text/src/: main.rs
examples/07_audio/: Cargo.toml
examples/07_audio/src/: main.rs
examples/08_hot_reload/: Cargo.toml
examples/08_hot_reload/src/: main.rs
examples/09_tilemap/: Cargo.toml
examples/09_tilemap/assets/: manifest.json
examples/09_tilemap/assets/tilemaps/: demo.tmj
examples/09_tilemap/src/: main.rs
examples/10_platformer/: Cargo.toml
examples/10_platformer/assets/: manifest.json
examples/10_platformer/assets/tilemaps/: level.tmj
examples/10_platformer/src/: main.rs
scripts/: perf-capture.sh  smoke-examples.sh  test-perf-capture.sh
(+105 files in other folders)
