[workspace.package]
version = "0.3.0-alpha"
edition = "2021"
license = "MIT"

[workspace]
resolver = "2"
members = [
    "crates/tungsten-core",
    "crates/tungsten-render",
    "crates/tungsten",
    "examples/01_window",
    "examples/02_ecs",
    "examples/03_dots",
    "examples/04_sprites",
    "examples/05_animation",
    "examples/06_text",
    "examples/07_audio",
]

[workspace.dependencies]
tungsten-core = { path = "crates/tungsten-core" }
tungsten-render = { path = "crates/tungsten-render" }
tungsten = { path = "crates/tungsten" }

# Platform abstractions (D-015 rule 1)
wgpu = "29.0.1"
winit = "0.30.12"
cpal = "0.15"

# Data format parsing (D-015 rule 2)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.4"
symphonia = { version = "0.5", default-features = false, features = ["ogg", "vorbis", "wav", "mp3", "aac"] }

# Math primitives (D-015 rule 3)
glam = "0.32.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Text rendering (D-015 rule 2, D-026)
# Pinned to git main because glyphon 0.10.0 on crates.io requires wgpu ^28; the main
# branch has wgpu 29 support but no release yet. Switch to a crates.io pin once one ships.
# Tracking: https://github.com/grovesNL/glyphon/releases
glyphon = { git = "https://github.com/grovesNL/glyphon.git", branch = "main" }

# GPU data layout
bytemuck = { version = "1", features = ["derive"] }
