[workspace.package]
version = "0.25.0"
edition = "2021"
license = "MIT"

[workspace]
resolver = "2"
members = [
    "crates/tungsten-core",
    "crates/tungsten-render",
    "crates/tungsten",
    "examples/01_platformer",
    "examples/02_sprite_stress",
    "examples/03_scene_state",
    "examples/04_shader_playground",
]

[workspace.dependencies]
tungsten-core = { path = "crates/tungsten-core" }
tungsten-render = { path = "crates/tungsten-render" }
tungsten = { path = "crates/tungsten" }

# Platform abstractions (D-015 rule 1)
wgpu = "29.0.1"
winit = "0.30.12"
cpal = "0.15"
notify = { version = "6", default-features = false }

# Data format parsing (D-015 rule 2)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.4"
symphonia = { version = "0.5", default-features = false, features = ["ogg", "vorbis", "wav", "mp3", "aac"] }

# Math primitives (D-015 rule 3)
glam = "0.32.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Text rendering (D-015 rule 2, D-026)
# Pinned to a specific commit because glyphon 0.10.0 on crates.io requires wgpu ^28; the main
# branch has wgpu 29 support but no release yet. Switch to a crates.io pin once one ships.
# Tracking: https://github.com/grovesNL/glyphon/releases
# Pinned commit: 2026-04-14 HEAD — update this when upgrading wgpu or when a crates.io release ships.
glyphon = { git = "https://github.com/grovesNL/glyphon.git", rev = "5ac022456ad16ae3ddb60c4f1db1f0f63e412571" }

# GPU data layout
bytemuck = { version = "1", features = ["derive"] }

# Lock-free SPSC ring buffer for audio command channel (D-015 rule 3, D-034)
rtrb = "0.3"

# ---------------------------------------------------------------------------
# Profiles
# ---------------------------------------------------------------------------

# Dev: project crates at opt-level 0 (fast incremental); all external deps at
# opt-level 2 so wgpu / winit / glam / cpal run at acceptable speed in debug mode.
# Deps rarely change, so the one-time compile cost does not hurt iteration speed.
[profile.dev.package."*"]
opt-level = 2

# Release: maximize binary performance.
#   lto = "thin"      — parallel cross-crate inlining via ThinLTO
#   codegen-units = 1 — single LLVM CGU, maximum within-crate inlining budget
#   panic = "abort"   — removes landing pads / unwind tables from LLVM IR
#   debug = 1         — line-number tables only; keeps `perf`/flamegraph annotations
#   strip = "none"    — explicit: symbols stay in binary for profiling workflow
#
# The bench profile inherits these settings. Re-baseline DECISIONS.md D-036
# after any change here.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
debug = 1
strip = "none"

# ---------------------------------------------------------------------------
# Lints
# ---------------------------------------------------------------------------
#
# Pedantic-clippy is enabled workspace-wide with a targeted allow list. The
# allow list is deliberate, not a blanket escape hatch:
#
#   * Numeric-cast lints (`cast_precision_loss`, `cast_possible_truncation`,
#     `cast_sign_loss`, `cast_possible_wrap`, `cast_lossless`) — graphics and
#     physics code constantly moves between `u32`/`usize`/`f32`/`u8`
#     (indices, color channels, timings). The casts are intentional; the
#     pedantic warnings are pure noise here.
#   * `float_cmp` — we compare floats against exact sentinels (0.0, epsilon,
#     literal constants in test fixtures) and that is fine.
#   * `similar_names` — short binding names (x1/x2, aa/ab, dt/t) are idiomatic
#     in math-heavy code.
#   * `too_many_lines` — a few setup / pipeline-build functions are long on
#     purpose; splitting them would only hide the linearity.
#   * `missing_errors_doc` / `missing_panics_doc` / `doc_markdown` — we do not
#     treat public API docs as a per-function ritual; rationale belongs in
#     `DECISIONS.md` and module headers, not on every `Result`-returning fn.
#   * `items_after_statements` — fine; moving `const`s to the top of a
#     function is a no-signal reorganization.
#   * `if_not_else` — `if x != y` often reads more naturally than the
#     inverted form; preserving author intent is worth more than the lint.
#   * `inline_always` — the per-stage hot-path schedulers in `tungsten::app`
#     deliberately request always-inline; the lint is opinionated not
#     correctness-bearing.
#   * `module_name_repetitions` — the facade crate re-exports types whose
#     names already carry the subsystem prefix (`InputState`, `AudioSystem`);
#     renaming them would harm discoverability.
#
# Everything else stays on. Keep this list narrow.

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
float_cmp = "allow"
if_not_else = "allow"
inline_always = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
