[package]
name = "tungsten-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core ECS, math, config, time, input, and asset registry for the Tungsten 2D engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
glam = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
symphonia = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ecs_bench"
harness = false

[[bench]]
name = "physics_bench"
harness = false

[[bench]]
name = "action_map_bench"
harness = false
