[package]
name = "tungsten"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Umbrella crate and winit application loop for the Tungsten 2D engine"

[dependencies]
tungsten-core = { workspace = true }
tungsten-render = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
pollster = { workspace = true }
