[package]
name = "tungsten"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Umbrella crate and winit application loop for the Tungsten 2D engine"

[dependencies]
tungsten-core = { workspace = true }
tungsten-render = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
pollster = { workspace = true }
cpal = { workspace = true }
notify = { workspace = true }
rtrb = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "particle_tick"
harness = false

[lints]
workspace = true
